# MeneTools

./: .gitignore  CHANGELOG.md  README  README.md  init.py  menecheck.py  menecof.py  menepath.py  menescope.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: mirror_to_gitlab.yml  pythonpackage.yml
data/: all_cofactors.csv  weighted_compounds.csv
menetools/: __init__.py  __main__.py  meneacti.py  menecheck.py  menecof.py  menedead.py  meneinc.py  menelabel.py  menepath.py  menescope.py  menescope_inc.py  meneseed.py  query.py  sbml.py  utils.py
menetools/encodings/: get_activated.lp  get_cofs.lp  get_cofs_weighted.lp  get_deadends.lp  get_incremental_scope.lp  get_labelled_scope.lp  get_min_paths.lp  get_paths.lp  get_scope.lp  get_seeds.lp  get_unproducible_targets.lp
src/: query.py  sbml.py
src/encodings/: get_cofs_weighted.lp  get_min_paths.lp  get_paths.lp  get_unproducible_targets.lp
test/: menedead_test.sbml  meneseed_test.sbml  menetools_test.py
test/mene_scope_inc/: seeds.sbml  targets.sbml
test/meneinc_test_data/: network.sbml
toy/: 1targets.sbml  network.sbml  seeds.sbml  targets.sbml
toy/tiny_toy/: draft.xml  seeds.xml  targets.xml  union.xml
